--- a/src/main/angular-app/src/app/refund-order/refund-order/refund-order.component.html
+++ b/src/main/angular-app/src/app/refund-order/refund-order/refund-order.component.html
@@ -1,4 +1,6 @@
-<po-page-default p-title="Detalhes das despesas">  
+ 
+  <po-page-default p-title="Detalhes das despesas">  
+    <po-container> 
     <div class="po-row">
       <po-datepicker 
         name="Data" 
@@ -28,5 +30,6 @@
     </div>
     
      
-    
+  </po-container> 
   </po-page-default>
+ 
